--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,18 @@
         android:theme="@style/Theme.OrderFoodAppsCH3"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.profile.ProfileChangeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OrderSuccessfullyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.ui.login.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.ui.register.RegisterActivity"
+            android:exported="false"/>
+        <activity
             android:name=".presentation.ui.orderfooddetail.DetailOrderFoodActivity"
             android:exported="false" />
         <activity
@@ -22,6 +34,9 @@
             android:exported="false" />
         <activity
             android:name=".presentation.ui.main.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.ui.splashscreen.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +44,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
